--- a/desktop/src/main/resources/org/example/desktop/cambiar-password-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/cambiar-password-view.fxml
@@ -2,62 +2,50 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" stylesheets="@estilos/login-register.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.PasswordController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" stylesheets="@estilos/login-register.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.PasswordController">
 
-    <VBox alignment="CENTER" prefHeight="500.0" prefWidth="300.0" spacing="20" styleClass="left-panel">
-        <padding>
-            <Insets bottom="40.0" left="30.0" right="30.0" top="40.0" />
-        </padding>
-
-        <ImageView fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@images/siaj-logo.png" />
-            </image>
-        </ImageView>
-
-        <Label alignment="CENTER" styleClass="title-label" text="SIAJ INVENTARIOS" wrapText="true" />
-    </VBox>
-
-    <VBox alignment="CENTER" prefHeight="500.0" prefWidth="400.0" spacing="25" styleClass="right-panel">
-        <padding>
-            <Insets bottom="50.0" left="40.0" right="40.0" top="50.0" />
-        </padding>
-
-        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@images/siaj-logo.png" />
-            </image>
-        </ImageView>
-
-        <Label styleClass="form-title" text="Cambiar contraseña">
-
-        </Label>
-
-        <VBox maxWidth="320.0" spacing="20">
-
-            <VBox spacing="8">
-                <Label styleClass="field-label" text="Vieja Contraseña" />
-                <TextField fx:id="oldPassword" promptText="Ingresa tu vieja contraseña" styleClass="password-field">
-                </TextField>
-            </VBox>
-
-            <VBox spacing="8">
-                <Label prefHeight="23.0" prefWidth="147.0" styleClass="field-label" text="Nueva Contraseña" />
-                <TextField fx:id="newPassword" promptText="Ingresa tu nueva contraseña" styleClass="password-field">
-                </TextField>
-            </VBox>
-            <Button mnemonicParsing="false"  prefHeight="45.0" maxWidth="Infinity"
-                    styleClass="primary-button" text="Actualizar nueva contraseña" onAction="#olvidePassword">
-                <VBox.margin>
-                    <Insets top="10.0"/>
-                </VBox.margin>
+    <top>
+        <HBox alignment="TOP_LEFT">
+            <padding>
+                <Insets bottom="10.0" left="15.0" right="15.0" top="15.0" />
+            </padding>
+            <Button mnemonicParsing="false" styleClass="primary-button" text="← Volver" onAction="#volver">
             </Button>
+        </HBox>
+    </top>
+
+
+
+    <center>
+        <VBox alignment="CENTER" prefHeight="500.0" prefWidth="400.0" spacing="25" styleClass="right-panel">
+            <padding>
+                <Insets bottom="50.0" left="40.0" right="40.0" top="50.0" />
+            </padding>
+
+            <Label styleClass="form-title" text="Cambiar contraseña" />
+
+            <VBox maxWidth="320.0" spacing="20">
+
+                <VBox spacing="8">
+                    <Label styleClass="field-label" text="Vieja Contraseña" />
+                    <TextField fx:id="oldPassword" promptText="Ingresa tu vieja contraseña" styleClass="password-field" />
+                </VBox>
+
+                <VBox spacing="8">
+                    <Label prefHeight="23.0" prefWidth="147.0" styleClass="field-label" text="Nueva Contraseña" />
+                    <TextField fx:id="newPassword" promptText="Ingresa tu nueva contraseña" styleClass="password-field" />
+                </VBox>
+
+                <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#olvidePassword" prefHeight="45.0" styleClass="primary-button" text="Actualizar nueva contraseña">
+                    <VBox.margin>
+                        <Insets top="10.0" />
+                    </VBox.margin>
+                </Button>
+            </VBox>
+
         </VBox>
+    </center>
 
-        <Region VBox.vgrow="ALWAYS" />
-
-    </VBox>
-</HBox>
+</BorderPane>
