Metodo olvide password

--- a/desktop/src/main/resources/org/example/desktop/cambiar-password-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/cambiar-password-view.fxml
@@ -4,47 +4,69 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" stylesheets="@estilos/login-register.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.PasswordController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/17.0.12"
+            fx:controller="org.example.desktop.controller.PasswordController"
+            prefWidth="700.0" prefHeight="500.0"
+            stylesheets="@estilos/login-register.css">
 
     <top>
         <HBox alignment="TOP_LEFT">
             <padding>
-                <Insets bottom="10.0" left="15.0" right="15.0" top="15.0" />
+                <Insets top="15" right="15" bottom="10" left="15" />
             </padding>
-            <Button mnemonicParsing="false" styleClass="primary-button" text="← Volver" onAction="#volver">
-            </Button>
+            <Button fx:id="btnVolver" text="← Volver"
+                    styleClass="primary-button"
+                    onAction="#volver"
+                    mnemonicParsing="false" />
         </HBox>
     </top>
 
-
-
     <center>
-        <VBox alignment="CENTER" prefHeight="500.0" prefWidth="400.0" spacing="25" styleClass="right-panel">
+        <VBox alignment="CENTER" spacing="25" styleClass="right-panel"
+              prefHeight="500.0" prefWidth="400.0">
             <padding>
-                <Insets bottom="50.0" left="40.0" right="40.0" top="50.0" />
+                <Insets top="50.0" right="40.0" bottom="50.0" left="40.0" />
             </padding>
 
-            <Label styleClass="form-title" text="Cambiar contraseña" />
+            <Label text="Cambiar contraseña" styleClass="form-title" />
 
-            <VBox maxWidth="320.0" spacing="20">
+            <VBox spacing="20" maxWidth="320.0">
 
-                <VBox spacing="8">
-                    <Label styleClass="field-label" text="Vieja Contraseña" />
+                <VBox fx:id="emailBox" spacing="8">
+                    <Label fx:id="labelEmail" text="Email registrado" styleClass="field-label" />
+                    <TextField fx:id="email" promptText="Ingrese el email registrado" styleClass="password-field" />
+                </VBox>
+
+                <VBox fx:id="oldPasswordBox" spacing="8">
+                    <Label fx:id="labelOldPassword" text="Vieja Contraseña" styleClass="field-label" />
                     <TextField fx:id="oldPassword" promptText="Ingresa tu vieja contraseña" styleClass="password-field" />
                 </VBox>
 
-                <VBox spacing="8">
-                    <Label prefHeight="23.0" prefWidth="147.0" styleClass="field-label" text="Nueva Contraseña" />
+                <VBox fx:id="newPasswordBox" spacing="8">
+                    <Label fx:id="labelNewPassword" text="Nueva Contraseña" styleClass="field-label" />
                     <TextField fx:id="newPassword" promptText="Ingresa tu nueva contraseña" styleClass="password-field" />
                 </VBox>
 
-                <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#olvidePassword" prefHeight="45.0" styleClass="primary-button" text="Actualizar nueva contraseña">
-                    <VBox.margin>
-                        <Insets top="10.0" />
-                    </VBox.margin>
-                </Button>
-            </VBox>
+                <VBox fx:id="repetirPasswordBox" spacing="8">
+                    <Label fx:id="labelRepetirPassword" text="Repetir Contraseña" styleClass="field-label" />
+                    <TextField fx:id="repetirPassword" promptText="Repetí la nueva contraseña" styleClass="password-field" />
+                </VBox>
 
+                <Button fx:id="btnCambiarPassword"
+                        text="Actualizar nueva contraseña"
+                        styleClass="primary-button"
+                        prefHeight="45.0"
+                        maxWidth="Infinity"
+                        onAction="#cambiarPassword" />
+
+                <Button fx:id="btnOlvidePassword"
+                        text="Generar nueva contraseña"
+                        styleClass="primary-button"
+                        prefHeight="45.0"
+                        maxWidth="Infinity"
+                        onAction="#olvidePassword" />
+            </VBox>
         </VBox>
     </center>
 
